# riscv

./: Pipfile  README.md  assembler.py  data.py  instruction.py  machine.py  pyproject.toml  sim.py  simulator.py
.github/workflows/: python-poetry.yml
implementation/: arithmetic.py  branch.py  memory.py
riscv/: data.py  instruction.py  machine.py  simulator.py
riscv/implementation/: arithmetic.py  branch.py  memory.py
riscv/tests/: test_riscinteger.py  test_simulator.py
tests/: test_instruction.py  test_riscinteger.py  test_simulator.py
