[project]
name = "riscv"
version = "0.1.0"
description = "Simulator for a subset of RISC-V"

[tool.poetry]
name = "riscv"
version = "0.1.0"
description = "Simulator for a subset of RISC-V"
authors = ["Tobias Kappé <tobias@kap.pe>"]

[tool.poetry.dependencies]
python = "^3.12"
multimethod = "^1.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
